@startuml

title __LIBS's Class Diagram__\n

  namespace com.example.sickar {
    namespace libs {
      class com.example.sickar.libs.EnhancedWrapContentViewPager {
          {static} - TAG : String
          + EnhancedWrapContentViewPager()
          + EnhancedWrapContentViewPager()
          # onMeasure()
      }
    }
  }
  

  namespace com.example.sickar {
    namespace libs {
      class com.example.sickar.libs.OnSwipeListener {
          + getAngle()
          + getDirection()
          + onFling()
          + onSwipe()
      }
    }
  }
  

  namespace com.example.sickar {
    namespace libs {
      enum Direction {
        down
        left
        right
        up
      }
    }
  }
  

  namespace com.example.sickar {
    namespace libs {
      class com.example.sickar.libs.ScaleGestureListener {
          {static} - MAX_SCALE : float
          {static} - MIN_SCALE : float
          {static} - TAG : String
          - scaleFactor : float
          - view : View
          + ScaleGestureListener()
          + onScale()
      }
    }
  }
  

  namespace com.example.sickar {
    namespace libs {
      class com.example.sickar.libs.SelfOrientingNode {
          + onUpdate()
      }
    }
  }
  

  namespace com.example.sickar {
    namespace libs {
      class com.example.sickar.libs.SwipeDisabledViewPager {
          + SwipeDisabledViewPager()
          + onInterceptTouchEvent()
          + onTouchEvent()
      }
    }
  }
  

  com.example.sickar.libs.EnhancedWrapContentViewPager -up-|> androidx.viewpager.widget.ViewPager
  com.example.sickar.libs.OnSwipeListener -up-|> android.view.GestureDetector.SimpleOnGestureListener
  com.example.sickar.libs.OnSwipeListener +-down- com.example.sickar.libs.OnSwipeListener.Direction
  com.example.sickar.libs.ScaleGestureListener -up-|> android.view.ScaleGestureDetector.SimpleOnScaleGestureListener
  com.example.sickar.libs.SelfOrientingNode -up-|> com.google.ar.sceneform.Node
  com.example.sickar.libs.SwipeDisabledViewPager -up-|> androidx.viewpager.widget.ViewPager


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
